--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+  <div id="user_nav">
+    <% if current_user %>
+      Logged in as <%= current_user.name %>.
+      <%= button_to "Log out", log_out_path, :method => "delete" %>
+    <% end %>
+  </div>
+
 <%= yield %>
 
 </body>
