--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -10,5 +10,17 @@
   <%= @bill.content %>
 </p>
 
+<%= form_for(@response) do |f| %>
+  <%= f.hidden_field :bill_id, :value => @bill.id %>
+  <%= f.label :vote, "Yes", :value => "true"  %>
+  <%= f.radio_button :vote, true %>
+  <%= f.label :vote, "No", :value => "false" %>
+  <%= f.radio_button :vote, false %>
+
+  <div class="actions">
+    <%= f.submit "Submit Vote" if session[:voter_id] %>
+  </div>
+<% end %>
+
 <%= link_to 'Edit', edit_bill_path(@bill) %> |
 <%= link_to 'Back', bills_path %>
