Fix voting on bills #shipit

--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -10,7 +10,7 @@
   <%= @bill.content %>
 </p>
 
-<%= form_for(@response) do |f| %>
+<%= form_for(@response) do |f| if session[:voter_id] %>
   <%= f.hidden_field :bill_id, :value => @bill.id %>
   <%= f.label :vote, "Yes", :value => "true"  %>
   <%= f.radio_button :vote, true %>
@@ -18,7 +18,7 @@
   <%= f.radio_button :vote, false %>
 
   <div class="actions">
-    <%= f.submit "Submit Vote" if session[:voter_id] %>
+    <%= f.submit "Submit Vote" %>
   </div>
 <% end %>
 
